<!--

    Copyright 2018-2019 rideOS, Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<resources>
    <string name="go_online_button_text">Go Online</string>
    <string name="offline_card_text">Ready to drive?</string>
    <string name="go_offline_button_text">Go Offline</string>
    <string name="online_idle_title_text">Waiting for assignments…</string>
    <string name="pickup_passenger_button_text">Confirm Pickup</string>
    <string name="waiting_for_pickup_title">Pickup Passenger</string>
    <string name="start_navigation_button_text">Start Navigation</string>
    <string name="confirm_arrival_button_text">I\'ve Arrived</string>
    <string name="waiting_for_pickup_confirmation_button">Confirm Pickup</string>
    <string name="nav_failure_alert_title">Failed to Navigate</string>
    <string name="nav_failure_alert_message">We failed to find a route to the given location.</string>
    <string name="nav_failure_alert_retry_button">Retry</string>
    <string name="nav_failure_alert_exit_button">Exit</string>
    <string name="driver_navigation_settings_title">Driver Navigation</string>
    <string name="simulate_navigation_switch_label">Simulate Navigation</string>
    <string name="pre_registration_information_text">Please complete your account registration to start accepting
        rides.
    </string>
    <string name="start_registration_button_text">Start Registration</string>
    <string name="registration_preferred_name_title">Preferred Name</string>
    <string name="registration_phone_number_title">Phone number</string>
    <string name="registration_license_plate_title">License Plate</string>
    <string name="registration_rider_capacity_title">Rider Capacity</string>
    <string name="account_registration_title">Account Registration</string>
    <string name="go_online_failure_message">Unable to go online at this time. Please, try again.</string>
    <string name="go_offline_failure_message">Unable to go offline at this time. Please, try again.</string>
    <string name="waiting_for_pickup_button">Confirm Passenger Pickup</string>
    <string name="waiting_for_pickup_failure_message">Unable to confirm pickup. Please try again.</string>
    <string name="confirm_arrival_failure_message">Unable to confirm arrival. Please try again.</string>
    <string name="trip_detail_drop_off_title">Drop-off</string>
    <string name="trip_detail_pickup_title">Pickup</string>
    <string name="trip_detail_passenger_title">Passenger</string>
    <string name="trip_detail_reject_alert_title">Decline Ride Request</string>
    <string name="trip_detail_reject_alert_description">Are you sure? This will cause a delay in the passenger pickup
        time.
    </string>
    <string name="trip_detail_reject_alert_positive_button">Yes, decline</string>
    <string name="trip_detail_cancel_alert_title">Cancel Trip</string>
    <string name="trip_detail_cancel_alert_description">Are you sure? This will cancel the current trip.</string>
    <string name="trip_detail_cancel_alert_positive_button">Yes, cancel</string>
    <string name="trip_detail_end_alert_title">End Trip</string>
    <string name="trip_detail_end_alert_description">Are you sure? This will end the current trip.</string>
    <string name="trip_detail_end_alert_positive_button">Yes, end trip</string>
    <string name="trip_detail_alert_negative_button">No</string>
    <string name="trip_detail_reject_ride_action_button">Decline Ride Request</string>
    <string name="trip_detail_cancel_trip_action_button">Cancel Trip</string>
    <string name="trip_detail_end_trip_action_button">End Trip</string>
    <string name="back_to_navigation_button">Back to Navigation</string>

    <plurals name="waiting_for_passengers_title_text">
        <item quantity="one">Pickup passenger</item>
        <item quantity="other">Pickup passengers</item>
    </plurals>

    <plurals name="waiting_for_passengers_detail_text">
        <item quantity="one">Expecting %1$d passenger</item>
        <item quantity="other">Expecting %1$d passengers</item>
    </plurals>

    <string name="pickup_passenger_detail_template">Pick up %1$s</string>
    <string name="drop_off_passenger_detail_template">Drop off %1$s</string>
    <string name="go_online_tutorial_text">Tap to set your availability. Go\nonline to start accepting rides.</string>
    <string name="register_vehicle_caution_text">Your phone number and license plate info will be visible to
        passengers.
    </string>
    <string name="vehicle_settings_license_hint">License Plate</string>
    <string name="vehicle_settings_title">Vehicle Info</string>
    <string name="vehicle_settings_menu_option">Vehicle Info</string>
    <string name="trip_detail_tooltip_text">Tap to see trip details, contact the\nrider, or modify the trip</string>
    <string name="new_ride_request_details_text">You have a new ride request</string>
    <string name="dismiss_driver_action_modal_button_text">Dismiss</string>
</resources>
