<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright 2018-2019 rideOS, Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/settings_background_light_gray"
                                                   android:transitionName="vehicle_registration"
>
    <Toolbar android:layout_width="match_parent" android:layout_height="56dp"
             app:layout_constraintTop_toTopOf="parent"
             android:elevation="4dp"
             android:background="@color/settings_background"
             android:title="@string/account_registration_title"
             android:navigationIcon="@drawable/ic_cancel_white_24dp"
             android:titleTextColor="@color/white"
             android:id="@+id/title_bar">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/save_button"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/save_button_text"
                android:visibility="gone"/>
    </Toolbar>
    <ScrollView android:layout_width="match_parent" android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/title_bar"
                app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent">
            <TextView
                    android:text="@string/register_vehicle_caution_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_vehicle_caution_text" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:textAlignment="textStart"
                    android:textColor="?attr/rideos.secondary_text_color" android:textSize="15sp"/>
            <TextView
                    android:text="@string/registration_preferred_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/registration_preferred_name_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textAllCaps="true"
                    android:textColor="?attr/rideos.settings_heading_color"
                    app:layout_constraintTop_toBottomOf="@+id/register_vehicle_caution_text"
                    android:layout_marginTop="24dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/registration_preferred_name_input"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/registration_preferred_name_title"
                    app:layout_constraintEnd_toEndOf="parent" android:paddingStart="18dp" android:paddingEnd="18dp"
                    android:background="?attr/rideos.primary_background_color"/>
            <TextView
                    android:text="@string/registration_phone_number_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/registration_phone_number_title" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/registration_preferred_name_input"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textAllCaps="true"
                    android:textColor="?attr/rideos.settings_heading_color"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/registration_phone_number_input"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/registration_phone_number_title"
                    app:layout_constraintEnd_toEndOf="parent" android:paddingStart="18dp" android:paddingEnd="18dp"
                    android:background="?attr/rideos.primary_background_color"/>
            <TextView
                    android:text="@string/registration_license_plate_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/registration_license_plate_title" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/registration_phone_number_input"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textAllCaps="true"
                    android:textColor="?attr/rideos.settings_heading_color"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/registration_license_plate_input"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/registration_license_plate_title"
                    app:layout_constraintEnd_toEndOf="parent" android:paddingStart="18dp" android:paddingEnd="18dp"
                    android:background="?attr/rideos.primary_background_color"/>
            <TextView
                    android:text="@string/registration_rider_capacity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/registration_rider_capacity_title" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/registration_license_plate_input"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textAllCaps="true"
                    android:textColor="?attr/rideos.settings_heading_color"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/registration_rider_capacity_input"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/registration_rider_capacity_title"
                    app:layout_constraintEnd_toEndOf="parent" android:paddingStart="18dp" android:paddingEnd="18dp"
                    android:background="?attr/rideos.primary_background_color"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
