<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright 2018-2019 rideOS, Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:background="?attr/rideos.primary_background_color"
                                                   android:layout_marginTop="24dp">

    <TextView
            android:text="@string/trip_detail_passenger_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trip_detail_passenger_title" android:textColor="?attr/rideos.primary_text_color"
            android:textStyle="bold" android:textSize="15sp" android:layout_marginTop="13dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trip_detail_passenger_name" android:textColor="?attr/rideos.primary_text_color"
            android:textSize="17sp" app:layout_constraintTop_toBottomOf="@+id/trip_detail_passenger_title"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_call_24dp"
            android:id="@+id/contact_button"
            android:tint="@drawable/text_button_color"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/trip_detail_passenger_title"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/trip_detail_passenger_name"/>
    <View
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/rideos.divider_color"
            android:paddingStart="16dp" android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/trip_detail_passenger_name" android:layout_marginTop="13dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       app:layout_constraintTop_toBottomOf="@id/divider_1"
                                                       android:id="@+id/trip_detail_pickup_section">
        <TextView
                android:text="@string/trip_detail_pickup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trip_detail_pickup_title" android:textColor="?attr/rideos.primary_text_color"
                android:textStyle="bold" android:textSize="15sp" android:layout_marginTop="13dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="18dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trip_detail_pickup_address" android:textColor="?attr/rideos.primary_text_color"
                android:textSize="17sp" app:layout_constraintTop_toBottomOf="@+id/trip_detail_pickup_title"
                android:layout_marginStart="18dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <View
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/rideos.divider_color"
                android:paddingStart="16dp" android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/trip_detail_pickup_address" android:layout_marginTop="13dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
            android:text="@string/trip_detail_drop_off_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trip_detail_drop_off_title" android:textColor="?attr/rideos.primary_text_color"
            android:textStyle="bold" android:textSize="15sp" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@id/trip_detail_pickup_section" android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trip_detail_drop_off_address" android:textColor="?attr/rideos.primary_text_color"
            android:textSize="17sp" app:layout_constraintTop_toBottomOf="@+id/trip_detail_drop_off_title"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <View
            android:id="@+id/divider_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/rideos.divider_color"
            android:paddingStart="16dp" android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/trip_detail_drop_off_address" android:layout_marginTop="13dp"/>

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trip_detail_action_button" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/divider_3" android:textSize="17sp"
            android:textColor="@drawable/text_button_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
